src/main/gen/com/tscript/ide/parser/TestParser.java
// This is a generated file. Not intended for manual editing.
package com.tscript.ide.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.tscript.ide.psi.TestTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TestParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(AND_EXPR, ARRAY_EXPR, ASSIGN_EXPR, BOOL_EXPR,
      COMP_EXPR, DICTIONARY_EXPR, EQ_EXPR, EXPR,
      INTEGER_EXPR, LAMBDA_EXPR, MUL_EXPR, NEGATION_EXPR,
      NOT_EXPR, NULL_EXPR, OR_EXPR, PLUS_EXPR,
      POSIVATION_EXPR, POW_EXPR, RANGE_EXPR, REAL_EXPR,
      SHIFT_EXPR, STRING_EXPR, THIS_EXPR, TYPEOF_PREFIX_EXPR,
      UNARY_EXPR, XOR_EXPR),
  };

  /* ********************************************************** */
  // or_expr (AND and_expr)*
  public static boolean and_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, AND_EXPR, "<and expr>");
    r = or_expr(b, l + 1);
    r = r && and_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AND and_expr)*
  private static boolean and_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_expr_1", c)) break;
    }
    return true;
  }

  // AND and_expr
  private static boolean and_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && and_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // FUNCTION function_def
  static boolean anon_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anon_function")) return false;
    if (!nextTokenIs(b, FUNCTION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, FUNCTION);
    p = r; // pin = 1
    r = r && function_def(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // (IDENT ASSIGN)? expr
  public static boolean arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG, "<arg>");
    r = arg_0(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (IDENT ASSIGN)?
  private static boolean arg_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_0")) return false;
    arg_0_0(b, l + 1);
    return true;
  }

  // IDENT ASSIGN
  private static boolean arg_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IDENT, ASSIGN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (arg (COMMA arg)*)?
  public static boolean arg_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_list")) return false;
    Marker m = enter_section_(b, l, _NONE_, ARG_LIST, "<arg list>");
    arg_list_0(b, l + 1);
    exit_section_(b, l, m, true, false, TestParser::recover_params);
    return true;
  }

  // arg (COMMA arg)*
  private static boolean arg_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_list_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arg(b, l + 1);
    r = r && arg_list_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA arg)*
  private static boolean arg_list_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_list_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arg_list_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arg_list_0_1", c)) break;
    }
    return true;
  }

  // COMMA arg
  private static boolean arg_list_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_list_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr (COMMA expr)*
  static boolean array_content(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_content")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = expr(b, l + 1);
    r = r && array_content_1(b, l + 1);
    exit_section_(b, l, m, r, false, TestParser::recover_array);
    return r;
  }

  // (COMMA expr)*
  private static boolean array_content_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_content_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!array_content_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_content_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean array_content_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_content_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BRACKET_OPEN BRACKET_CLOSE | BRACKET_OPEN array_content BRACKET_CLOSE
  public static boolean array_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expr")) return false;
    if (!nextTokenIs(b, BRACKET_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseTokens(b, 0, BRACKET_OPEN, BRACKET_CLOSE);
    if (!r) r = array_expr_1(b, l + 1);
    exit_section_(b, m, ARRAY_EXPR, r);
    return r;
  }

  // BRACKET_OPEN array_content BRACKET_CLOSE
  private static boolean array_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_expr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACKET_OPEN);
    r = r && array_content(b, l + 1);
    r = r && consumeToken(b, BRACKET_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // and_expr assign_op assign_expr | and_expr
  public static boolean assign_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ASSIGN_EXPR, "<assign expr>");
    r = assign_expr_0(b, l + 1);
    if (!r) r = and_expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // and_expr assign_op assign_expr
  private static boolean assign_expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_expr_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = and_expr(b, l + 1);
    r = r && assign_op(b, l + 1);
    r = r && assign_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASSIGN | ADD_ASSIGN | SUB_ASSIGN | MUL_ASSIGN
  // | DIV_ASSIGN | IDIV_ASSIGN | MOD_ASSIGN | POW_ASSIGN | SAL_ASSIGN | SAR_ASSIGN | SLR_ASSIGN
  public static boolean assign_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_OP, "<assign op>");
    r = consumeToken(b, ASSIGN);
    if (!r) r = consumeToken(b, ADD_ASSIGN);
    if (!r) r = consumeToken(b, SUB_ASSIGN);
    if (!r) r = consumeToken(b, MUL_ASSIGN);
    if (!r) r = consumeToken(b, DIV_ASSIGN);
    if (!r) r = consumeToken(b, IDIV_ASSIGN);
    if (!r) r = consumeToken(b, MOD_ASSIGN);
    if (!r) r = consumeToken(b, POW_ASSIGN);
    if (!r) r = consumeToken(b, SAL_ASSIGN);
    if (!r) r = consumeToken(b, SAR_ASSIGN);
    if (!r) r = consumeToken(b, SLR_ASSIGN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // CURLY_OPEN stmt_list CURLY_CLOSE
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, CURLY_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, null);
    r = consumeToken(b, CURLY_OPEN);
    p = r; // pin = 1
    r = r && report_error_(b, stmt_list(b, l + 1));
    r = p && consumeToken(b, CURLY_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean bool_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_expr")) return false;
    if (!nextTokenIs(b, "<bool expr>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_EXPR, "<bool expr>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BREAK SEMI
  public static boolean break_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "break_stmt")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BREAK_STMT, null);
    r = consumeTokens(b, 1, BREAK, SEMI);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // PAREN_OPEN arg_list PAREN_CLOSE
  public static boolean call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call")) return false;
    if (!nextTokenIs(b, PAREN_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CALL, null);
    r = consumeToken(b, PAREN_OPEN);
    p = r; // pin = 1
    r = r && report_error_(b, arg_list(b, l + 1));
    r = p && consumeToken(b, PAREN_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // identifier (DOT identifier)*
  public static boolean chainable_identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "chainable_identifier")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHAINABLE_IDENTIFIER, "<chainable identifier>");
    r = identifier(b, l + 1);
    r = r && chainable_identifier_1(b, l + 1);
    exit_section_(b, l, m, r, false, TestParser::recover_global);
    return r;
  }

  // (DOT identifier)*
  private static boolean chainable_identifier_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "chainable_identifier_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!chainable_identifier_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "chainable_identifier_1", c)) break;
    }
    return true;
  }

  // DOT identifier
  private static boolean chainable_identifier_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "chainable_identifier_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // visibility (
  // visibility | definition | constructor_def | var_dec | const_dec)*
  static boolean class_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = visibility(b, l + 1);
    r = r && class_body_1(b, l + 1);
    exit_section_(b, l, m, r, false, TestParser::recover_class);
    return r;
  }

  // (
  // visibility | definition | constructor_def | var_dec | const_dec)*
  private static boolean class_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_body_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!class_body_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "class_body_1", c)) break;
    }
    return true;
  }

  // visibility | definition | constructor_def | var_dec | const_dec
  private static boolean class_body_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_body_1_0")) return false;
    boolean r;
    r = visibility(b, l + 1);
    if (!r) r = definition(b, l + 1);
    if (!r) r = constructor_def(b, l + 1);
    if (!r) r = var_dec(b, l + 1);
    if (!r) r = const_dec(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // CURLY_OPEN CURLY_CLOSE | CURLY_OPEN class_body CURLY_CLOSE
  public static boolean class_body_def(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_body_def")) return false;
    if (!nextTokenIs(b, CURLY_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseTokens(b, 0, CURLY_OPEN, CURLY_CLOSE);
    if (!r) r = class_body_def_1(b, l + 1);
    exit_section_(b, m, CLASS_BODY_DEF, r);
    return r;
  }

  // CURLY_OPEN class_body CURLY_CLOSE
  private static boolean class_body_def_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_body_def_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CURLY_OPEN);
    r = r && class_body(b, l + 1);
    r = r && consumeToken(b, CURLY_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (ABSTRACT | STATIC)? CLASS IDENT (COLON chainable_identifier)? class_body_def
  public static boolean class_def(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLASS_DEF, "<class def>");
    r = class_def_0(b, l + 1);
    r = r && consumeTokens(b, 1, CLASS, IDENT);
    p = r; // pin = 2
    r = r && report_error_(b, class_def_3(b, l + 1));
    r = p && class_body_def(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (ABSTRACT | STATIC)?
  private static boolean class_def_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_0")) return false;
    class_def_0_0(b, l + 1);
    return true;
  }

  // ABSTRACT | STATIC
  private static boolean class_def_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_0_0")) return false;
    boolean r;
    r = consumeToken(b, ABSTRACT);
    if (!r) r = consumeToken(b, STATIC);
    return r;
  }

  // (COLON chainable_identifier)?
  private static boolean class_def_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_3")) return false;
    class_def_3_0(b, l + 1);
    return true;
  }

  // COLON chainable_identifier
  private static boolean class_def_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && chainable_identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENT (ASSIGN expr)?
  public static boolean closure(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closure")) return false;
    if (!nextTokenIs(b, IDENT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLOSURE, null);
    r = consumeToken(b, IDENT);
    p = r; // pin = 1
    r = r && closure_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (ASSIGN expr)?
  private static boolean closure_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closure_1")) return false;
    closure_1_0(b, l + 1);
    return true;
  }

  // ASSIGN expr
  private static boolean closure_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closure_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSIGN);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // closure (COMMA closure)*
  static boolean closure_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closure_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = closure(b, l + 1);
    r = r && closure_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, TestParser::recover_array);
    return r;
  }

  // (COMMA closure)*
  private static boolean closure_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closure_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!closure_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "closure_list_1", c)) break;
    }
    return true;
  }

  // COMMA closure
  private static boolean closure_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closure_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && closure(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BRACKET_OPEN BRACKET_CLOSE | BRACKET_OPEN closure_list BRACKET_CLOSE
  static boolean closures(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closures")) return false;
    if (!nextTokenIs(b, BRACKET_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseTokens(b, 0, BRACKET_OPEN, BRACKET_CLOSE);
    if (!r) r = closures_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // BRACKET_OPEN closure_list BRACKET_CLOSE
  private static boolean closures_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closures_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACKET_OPEN);
    r = r && closure_list(b, l + 1);
    r = r && consumeToken(b, BRACKET_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // shift_expr (comp_op comp_expr)*
  public static boolean comp_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, COMP_EXPR, "<comp expr>");
    r = shift_expr(b, l + 1);
    r = r && comp_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (comp_op comp_expr)*
  private static boolean comp_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!comp_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comp_expr_1", c)) break;
    }
    return true;
  }

  // comp_op comp_expr
  private static boolean comp_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comp_op(b, l + 1);
    r = r && comp_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
